# pcb-plugins

./: .gitignore  AUTHORS.plug-ins  CONTRIB.plug-ins  ChangeLog  ChangeLog.plug-ins  Makefile.am  README  README.plug-ins  autogen.sh  configure.ac  index.html
doc/: autocrop.txt  distalign.txt  join-found.txt  lockelements.txt  polycombine.txt  polystitch.txt  ratsel.txt  renumberblock.txt  sedrename.txt  smartdisperse.txt
doc/doxygen/: .gitignore  pcb-plugins-dox-no-call-graphs.dox  pcb-plugins-dox-with-call-graphs.dox  pcb-plugins-main.txt  what-are-pcb-plugins.html
doc/footprint-update/: footprint-update.html
doc/ratsel/: UserGuide.html
doc/teardrops/: sz=468x60B.htm  teardrops.html
doc/toporouter/: Topological Autorouter.html  toporouter.css
examples/: polystitch.pcb
examples/polycombine/: uc.pcb  uc_combined.pcb
src/: Makefile  autocrop.c  boardflip.c  distalign.c  dxfout.c  findelement.c  findrat.c  ghellopcb.c  join-found.c  jostle.c  lockelements.c  polycombine.c  polystitch.c  renumberblock.c  sedrename.c  smartdisperse.c  teardrops.c  upth2pth.c
src/footprint-update/: Makefile  footprintupdate.c  matrix.c
src/plugins/: .gitignore  Makefile  autocrop.c  boardflip.c  distalign.c  distaligntext.c  dxfout.c  elementupdate.c  findelement.c  findrat.c  ghellopcb.c  join-found.c  jostle.c  lockelements.c  pic.c  polycombine.c  polystitch.c  protoboard.c  renumberblock.c  sedrename.c  smartdisperse.c  teardrops.c  upth2pth.c
src/plugins/footprint-update/: Makefile  README  footprintupdate.c  matrix.h  pad-pin-data.c  pad-pin-data.h  utilities.c  utilities.h
src/plugins/footprint-update/footprint-update/: Makefile  pad-pin-data.c  pad-pin-data.h
src/plugins/ratsel/: Makefile  cIFace.c  getFileNames.pl
src/plugins/ratsel/java/: Connection.java
src/plugins/ratsel/ratsel/: cIFace.h  cppIFace.cpp
src/plugins/ratsel/ratsel/src/ratsel/: Rat.java  Side.java
src/plugins/ratsel/src/ratsel/: JIFace.java  NetList.java  Parser.java
src/ratsel/: Make.Settings  cppIFace.hpp
src/ratsel/src/ratsel/: Location.java  Net.java  PCB.java  Pin.java
src/ratsel/utst/ratsel/: ParserTest.java
src/toporouter/: Makefile  toporouter.c  toporouter.h  triangle.c  triangle.h  types.h
